argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    # Ingress Core Setting
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "ingress-group"
spec:
  ingressClassName: alb
  rules:
    - host: argocd.abcbit.shop
      http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: grafana-service  # service와 name 동일하게 !!
               port:
                 number: 80
